[build-system]
build-backend = "cmeel"
requires = ["cmeel-gettext", "cmeel-help2man", "cmeel[build]"]

[project]
description = "cmeel distribution for Texinfo"
license = "LGPL-3.0-only"
name = "cmeel-texinfo"
requires-python = ">= 3.8"
version = "7.1"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-texinfo"
repository = "https://github.com/cmake-wheel/cmeel-texinfo.git"

[tool.cmeel]
has-sitelib = false
run-tests = false

[tool.tomlsort]
all = true
